--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,6 +19,7 @@ jobs:
         with:
           node-version: 20.
 
-      - name: Run install and lint
+      - name: Run install, lint and test
         run: npm install
           npm run lint
+          npm run test
