--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,9 +17,13 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 20.
+          node-version: 20
 
-      - name: Run install, lint and test
+      - name: Run install
         run: npm install
-          npm run lint
-          npm run test
+
+      - name: Run lint
+        run: npm run lint
+
+      - name: Run test
+        run: npm run test
